--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     Hello world
+    <a href="static.html">A static file</a>
     <script src="bundle.js"></script>
   </body>
 </html>
