--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title></title>
   </head>
   <body>
-    Hello world
+    Hello world<br>
+    <img src="images/example.png"><br>
     <a href="static.html">A static file</a>
     <script src="bundle.js"></script>
   </body>
